[project]
name = "eham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "datasets>=4.5.0",
    "docopt>=0.6.2",
    "fairseq2>=0.7.0",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=1.26.4",
    "plotly>=6.5.2",
    "rich>=13.9.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sonar-space>=0.5.0",
    "tensorflow>=2.21.0",
    "torch>=2.9.0",
]
